--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+axum = "0.6.11"
 chrono = "0.4.23"
 rusqlite = "0.28.0"
+serde = {version = "1.0.156", features = ["derive"]}
+serde_json = "1.0.94"
+tokio = {version = "1.26.0", features = ["full"]}
+tracing = "0.1.37"
+tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
