--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -6,3 +6,4 @@ authors = ["Alex Blood"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+yew = "0.21.0"
