--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -6,4 +6,5 @@ authors = ["Alex Blood"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-yew = "0.21.0"
+chrono = "0.4.31"
+yew = {version = "0.21.0", features = ["csr"]}
