Began implementing Axum for backend. Will be using axum

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -6,3 +6,6 @@ authors = ["Alex Blood"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+axum = "0.6.20"
+hyper = "0.14.27"
+tokio = {version = "1.33.0", features = ["full"]}
