--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -9,4 +9,6 @@ authors = ["Alex Blood"]
 axum = "0.6.20"
 hyper = "0.14.27"
 rusqlite = "0.29.0"
+serde = { version = "1.0.190", features = ["derive"] }
+serde_json = "1.0.108"
 tokio = {version = "1.33.0", features = ["full"]}
