--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,16 @@
 [package]
-name = "backend"
+name = "rust-micro-cms"
 version = "0.1.0"
 edition = "2021"
 authors = ["Alex Blood"]
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 axum = "0.6.20"
 axum-util = "0.2.2"
 hyper = "0.14.27"
-rusqlite = "0.29.0"
+r2d2 = "0.8.10"
+r2d2_sqlite = "0.23.0"
+rusqlite = "0.30.0"  # Upgraded version
 serde = { version = "1.0.190", features = ["derive"] }
 serde_json = "1.0.108"
 tokio = {version = "1.33.0", features = ["full"]}
