tinkering with the add_post api

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Alex Blood"]
 [dependencies]
 axum = "0.6.20"
 axum-util = "0.2.2"
+chrono = "0.4.31"
 hyper = "0.14.27"
 r2d2 = "0.8.10"
 r2d2_sqlite = "0.23.0"
