--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 authors = ["Alex Blood"]
 
 [dependencies]
-axum = "0.6.20"
+axum = { version = "0.6.20", features = ["macros"] }
 axum-util = "0.2.2"
 chrono = "0.4.31"
 hyper = "0.14.27"
