--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,4 @@ chrono = { version = "0.4.34", features = ["serde"] }
 dotenv = "0.15.0"
 serde = "1.0.196"
 sqlx = { version = "0.7.3", features = ["runtime-tokio","sqlite"] }
-tokio = { version = "1.36.0", features = ["full"]}
+tokio = { version = "1.36.0", features = ["full", "rt-multi-thread"] }
