--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ anyhow = "1.0.79"
 axum = "0.7.4"
 chrono = { version = "0.4.34", features = ["serde"] }
 dotenv = "0.15.0"
-handlebars = "5.1.0"
+handlebars = { version = "5.1.0", features = ["dir_source"] }
 serde = "1.0.196"
 sqlx = { version = "0.7.3", features = ["runtime-tokio","sqlite"] }
 tokio = { version = "1.36.0", features = ["full", "rt-multi-thread"] }
