--- a/rust-micro-cms/Cargo.toml
+++ b/rust-micro-cms/Cargo.toml
@@ -5,10 +5,12 @@ edition = "2021"
 authors = ["Alex Blood"]
 
 [dependencies]
+anyhow = "1.0.81"
 axum = "0.7.5"
 chrono = "0.4.35"
 serde = "1.0.197"
 serde_json = "1.0.114"
 simple-log = "1.6.0"
+sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite"] }
 tokio = { version = "1.36.0", features = ["full"] }
 
