--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,13 @@ members = [
     "rust-micro-cms",
     "server-side-render",
 ]
+
+[workspace.dependencies]
+anyhow = "1.0.81"
+axum = "0.7.5"
+chrono = "0.4.35"
+serde = "1.0.197"
+serde_json = "1.0.114"
+simple-log = "1.6.0"
+sqlx = "0.7.4"
+tokio = "1.36.0"
