Updated readme for sqlx usage and updated gitignore so .env is part of repo

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@ Cargo.lock
 **/Cargo.lock
 **/target/
 Cargo.lock
-.env
 .idea/
 .vscode/
 *.swp
@@ -18,3 +17,4 @@ Cargo.lock
 *.log
 *.db
 /tmp
+migrations/
