Added serde and reqest to frontend

--- a/front-end/Cargo.toml
+++ b/front-end/Cargo.toml
@@ -12,6 +12,7 @@ categories = ["gui", "wasm", "web-programming"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 chrono.workspace = true
-serde.workspace = true
+reqwest = { version = "0.12.4", features = ["json"] }
+serde = { workspace = true, features = ["derive"] }
 web-sys = "0.3.69"
 yew = { version="0.20", features=["csr"] }
