--- a/front-end/Cargo.toml
+++ b/front-end/Cargo.toml
@@ -15,5 +15,5 @@ chrono.workspace = true
 reqwest = { version = "0.12.4", features = ["json"] }
 serde = { workspace = true, features = ["derive"] }
 web-sys = "0.3.69"
-yew = { version="0.20", features=["csr"] }
-yew-router = { git = "https://github.com/yewstack/yew.git", package = "yew-router" }
+yew = { version = "0.21.0", features = ["csr"] }
+yew-router = {version = "0.18.0" }
