--- a/rust-micro-cms/Cargo.toml
+++ b/rust-micro-cms/Cargo.toml
@@ -15,4 +15,5 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 simple-log = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
+tower-http = { version = "0.5.2", features = ["cors"] }
 
