--- a/front-end/Cargo.toml
+++ b/front-end/Cargo.toml
@@ -15,6 +15,18 @@ chrono.workspace = true
 gloo-net = "0.5.0"
 reqwest = { version = "0.12.4", features = ["json"] }
 serde = { workspace = true, features = ["derive"] }
+wasm-bindgen = "0.2.92"
 wasm-bindgen-futures = "0.4.42"
 yew = { version = "0.21.0", features = ["csr"] }
 yew-router = {version = "0.18.0" }
+
+
+[dependencies.web-sys]
+version = "0.3"
+features = [
+    "HtmlTextAreaElement",
+    "HtmlElement",
+    "Element",
+    "Node",
+    "EventTarget",
+]
