--- a/front-end/Cargo.toml
+++ b/front-end/Cargo.toml
@@ -24,10 +24,4 @@ yew-router = {version = "0.18.0" }
 
 [dependencies.web-sys]
 version = "0.3"
-features = [
-    "HtmlTextAreaElement",
-    "HtmlElement",
-    "Element",
-    "Node",
-    "EventTarget",
-]
+features = ["HtmlTextAreaElement", "HtmlElement", "Element", "Node", "EventTarget"]
