--- a/rust-micro-cms/Cargo.toml
+++ b/rust-micro-cms/Cargo.toml
@@ -16,4 +16,5 @@ serde_json = { workspace = true }
 simple-log = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 tower-http = { version = "0.5.2", features = ["cors"] }
+webauthn-rs = "0.5.0"
 
